--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -3,7 +3,6 @@ project(UI VERSION 1.0.0)
 
 
 set(SOURCES
-    src/ui.h
     src/ui.cpp
 )
 
@@ -13,5 +12,5 @@ target_link_libraries(UI imgui)
 
 target_include_directories(
     UI PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/dynalo/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/DHR
 )
